examples/invalid/06_OverlappingInstance.lune
module BadOverlap exposing (x)

class Functor (f : Type -> Type) where
  fmap : (a -> b) -> f a -> f b

type List a =
  Nil
  | Cons a (List a)

instance Functor List where
  fmap = \f xs -> xs

instance Functor List where
  fmap = \f xs -> xs

x : List Int
x =
  Nil

